--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -992,7 +992,7 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	├─ kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
  ├─ vcpu_run()            					// 死循环进入vcpu_enter_guest
  |	├─for(;;)                               // 循环受vcpu_enter_guest()返回值/系统信号控制, 只有异常/有外部信号才退出循环
- |	|   ├─ vcpu_enter_guest()                	// 物理CPU进入guest模式
+ |	|   ├─ vcpu_enter_guest()      // 物理CPU进入guest模式
  |	|	|   ├─ kvm_request_pending(); // 进入Guest模式前先处理相关挂起的请求(vcpu->requests), 每个有相应处理
  |	|	|   ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
  |	|	|   |   ├─ ++vcpu->stat.req_event;      // 
@@ -1163,9 +1163,10 @@ static int vcpu_run(struct kvm_vcpu *vcpu)
 
 正常情况下，将`kvm_vcp->arch.mp_state`的取值作为**单机未运行**的取值：`KVM_MP_STATE_RUNNABLE`；如果 vCPU 在 VM 中处于**其他状态**，则会**出错**。在运行中有一个**循环**，直到确认了`vcpu_enter_guest()`函数执行完毕，即**物理CPU进入了GUEST状态**并且执行完成后，才会执行下一步操作。
 
-`vcpu_run`最终调用`vcpu_enter_guest`，该函数实现了**进入Guest**，并执行**Guest OS具体指令**的操作。对应于Intel平台，该函数为`vmx_vcpu_run`(设置**Guest CR3**和**其他寄存器**、**EPT/影子页表相关设置**、汇编代码VMLAUNCH切换到非根模式，执行Guest目标代码)。
+`vcpu_run`最终调用`vcpu_enter_guest`，该函数实现了**进入Guest**，并执行**Guest OS具体指令**的操作。对应于Intel平台，该函数为`vmx_vcpu_run`(设置**Guest CR3**和**其他寄存器**、**EPT/影子页表相关设置**、汇编代码VMLAUNCH切换到非根模式，执行Guest目标代码)。`vcpu_enter_guest`返回1的话表明不用退出到userspace, 
 
 ```cpp
+// arch/x86/kvm/x86.c
 /*
  * Returns 1 to let vcpu_run() continue the guest execution loop without
  * exiting to the userspace.  Otherwise, the value will be returned to the
