--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -349,7 +349,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
  |   ├─ page = alloc_page(); // 分配一页内存给vcpu->run(struct kvm_run)
  |   ├─ kvm_vcpu_init(vcpu, kvm, id); // vcpu结构体一些变量初始化
  |   ├─ kvm_arch_vcpu_create() // 初始化kvm_vcpu_arch结构体, 架构相关
- |   |   ├─ vcpu->arch.mp_state = KVM_MP_STATE_UNINITIALIZED/KVM_MP_STATE_RUNNABLE; // 设置vcpu状态
+ |   |   ├─ vcpu->arch.mp_state = KVM_MP_STATE_UNINITIALIZED/KVM_MP_STATE_RUNNABLE; // 设置vcpu状态为可运行态
  |   |   ├─ kvm_set_tsc_khz() // tsc的设置
  |   |   ├─ kvm_mmu_create() // kvm_vcpu_arch中mmu相关初始化, 内存虚拟化, 地址转换的重点
  |   |   ├─  └─ alloc_mmu_pages() // 给vcpu->arch的gust mmu和root mmu分配页面
@@ -517,7 +517,7 @@ int kvm_arch_vcpu_create(struct kvm_vcpu *vcpu)
 {
         struct page *page;
         int r;
-
+        // irqchip不在内核态实现或该vcpu被重置为bsp
         if (!irqchip_in_kernel(vcpu->kvm) || kvm_vcpu_is_reset_bsp(vcpu))
                 vcpu->arch.mp_state = KVM_MP_STATE_RUNNABLE;
         else
@@ -992,7 +992,7 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	├─ kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
  ├─ vcpu_run()            					// 死循环进入vcpu_enter_guest
  |	├─for(;;)                               // 循环受vcpu_enter_guest()返回值/系统信号控制, 只有异常/有外部信号才退出循环
- |	|   ├─ vcpu_enter_guest()      // 物理CPU进入guest模式
+ |	|   ├─ vcpu_enter_guest()      // 物理CPU进入guest模式, 返回1表明不用退到userspace, 否则退到userspace
  |	|	|   ├─ kvm_request_pending(); // 进入Guest模式前先处理相关挂起的请求(vcpu->requests), 每个有相应处理
  |	|	|   ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
  |	|	|   |   ├─ ++vcpu->stat.req_event;      // 
@@ -1163,7 +1163,7 @@ static int vcpu_run(struct kvm_vcpu *vcpu)
 
 正常情况下，将`kvm_vcp->arch.mp_state`的取值作为**单机未运行**的取值：`KVM_MP_STATE_RUNNABLE`；如果 vCPU 在 VM 中处于**其他状态**，则会**出错**。在运行中有一个**循环**，直到确认了`vcpu_enter_guest()`函数执行完毕，即**物理CPU进入了GUEST状态**并且执行完成后，才会执行下一步操作。
 
-`vcpu_run`最终调用`vcpu_enter_guest`，该函数实现了**进入Guest**，并执行**Guest OS具体指令**的操作。对应于Intel平台，该函数为`vmx_vcpu_run`(设置**Guest CR3**和**其他寄存器**、**EPT/影子页表相关设置**、汇编代码VMLAUNCH切换到非根模式，执行Guest目标代码)。`vcpu_enter_guest`返回1的话表明不用退出到userspace, 
+`vcpu_run`最终调用`vcpu_enter_guest`，该函数实现了**进入Guest**，并执行**Guest OS具体指令**的操作。对应于Intel平台，该函数为`vmx_vcpu_run`(设置**Guest CR3**和**其他寄存器**、**EPT/影子页表相关设置**、汇编代码VMLAUNCH切换到非根模式，执行Guest目标代码)。`vcpu_enter_guest`返回**1**的话表明不用退出到userspace而继续虚拟机运行循环, 否则, **返回该值给userspace**.
 
 ```cpp
 // arch/x86/kvm/x86.c
