--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -991,16 +991,16 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  ├─ kvm_load_guset_fpu()         			//  加载虚拟机的fpu
  |	├─ kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
  ├─ vcpu_run()            					// 死循环进入vcpu_enter_guest
- |	├─for(;;)                               // 循环受vcpu_enter_guest()返回值/系统信号控制, 只有异常/有外部信号才退出循环
+ |	├─for(;;)                               // 循环受vcpu_enter_guest()返回值或系统信号控制, 只有异常或外部信号才退出循环
  |	|   ├─ vcpu_enter_guest()      // 物理CPU进入guest模式, 返回1表明不用退到userspace, 否则退到userspace
- |	|	|   ├─ kvm_request_pending(); // 进入Guest模式前先处理相关挂起的请求(vcpu->requests), 每个有相应处理
+ |	|	|   ├─ kvm_request_pending(); // 进入Guest模式前先处理相关挂起的请求(vcpu->requests大于0), 每个有相应处理
  |	|	|   ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
  |	|	|   |   ├─ ++vcpu->stat.req_event;      // 
  |	|	|   |   ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi等
  |	|	|   ├─ kvm_mmu_reload(vcpu);  			// 加载mmu
  |	|	|   ├─ kvm_x86_ops.prepare_guest_switch(vcpu); // // 进入Guest前期准备，架构相关, 准备陷入到guest, 保存vmexit时加载的host状态
  |	|	|   ├─ local_irq_disable();  			// 屏蔽中断响应，准备进入guest
- |	|	|   ├─ vcpu->mode = IN_GUEST_MODE;  		// 将vcpu模式设为guest模式
+ |	|	|   ├─ vcpu->mode = IN_GUEST_MODE;  // 将vcpu模式设为guest模式
  |	|	|   ├─ guest_enter_irqoff();  			// 计算虚拟机系统时间和上下文切换
  |	|	|   ├─ kvm_x86_ops.run(vcpu)  			// 开始运行guest, 会调用vmx_vcpu_run
  |	|	|   |   ├─ __vmx_vcpu_run()  			// 调用汇编代码, vmlaunch指令, 再往后就是vm-exit的流程了
@@ -1181,7 +1181,8 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
         enum exit_fastpath_completion exit_fastpath = EXIT_FASTPATH_NONE;
 
         bool req_immediate_exit = false;
-         /*进入Guest模式前先处理相关挂起的请求*/
+        //进入Guest模式前先处理相关挂起的请求
+        // vcpu->requests大于0
         if (kvm_request_pending(vcpu)) {
                 if (kvm_check_request(KVM_REQ_GET_VMCS12_PAGES, vcpu)) {
                         if (unlikely(!kvm_x86_ops.get_vmcs12_pages(vcpu))) {
@@ -1189,7 +1190,7 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
                                 goto out;
                         }
                 }
-                /*卸载MMU*/
+                /*MMU重加载, 先卸载*/
                 if (kvm_check_request(KVM_REQ_MMU_RELOAD, vcpu))
                         kvm_mmu_unload(vcpu);
                 /*定时器迁移*/
