--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -349,7 +349,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
  |   ├─ page = alloc_page(); // 分配一页内存给vcpu->run(struct kvm_run)
  |   ├─ kvm_vcpu_init(vcpu, kvm, id); // vcpu结构体一些变量初始化
  |   ├─ kvm_arch_vcpu_create() // 初始化kvm_vcpu_arch结构体, 架构相关
- |   |   ├─ vcpu->arch.mp_state = KVM_MP_STATE_UNINITIALIZED/KVM_MP_STATE_RUNNABLE; // 设置vcpu状态为可运行态
+ |   |   ├─ vcpu->arch.mp_state = KVM_MP_STATE_UNINITIALIZED/KVM_MP_STATE_RUNNABLE; // 设置vcpu状态
  |   |   ├─ kvm_set_tsc_khz() // tsc的设置
  |   |   ├─ kvm_mmu_create() // kvm_vcpu_arch中mmu相关初始化, 内存虚拟化, 地址转换的重点
  |   |   ├─  └─ alloc_mmu_pages() // 给vcpu->arch的gust mmu和root mmu分配页面
@@ -517,7 +517,7 @@ int kvm_arch_vcpu_create(struct kvm_vcpu *vcpu)
 {
         struct page *page;
         int r;
-        // irqchip不在内核态实现或该vcpu被重置为bsp
+
         if (!irqchip_in_kernel(vcpu->kvm) || kvm_vcpu_is_reset_bsp(vcpu))
                 vcpu->arch.mp_state = KVM_MP_STATE_RUNNABLE;
         else
@@ -989,32 +989,37 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  ├─ vcpu_load(vcpu)                          //  KVM虚拟机VCPU数据结构载入物理CPU
  ├─ kvm_sigset_activate(vcpu)                // 信号屏蔽, 防止干扰
  ├─ kvm_load_guset_fpu()         			//  加载虚拟机的fpu
- |	├─ kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
+ |   ├─ kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
+ |   ├─ kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
+ |   └─ ; // 将当前进程的fpu赋值给vcpu
  ├─ vcpu_run()            					// 死循环进入vcpu_enter_guest
- |	├─for(;;)                               // 循环受vcpu_enter_guest()返回值或系统信号控制, 只有异常或外部信号才退出循环
- |	|   ├─ vcpu_enter_guest()      // 物理CPU进入guest模式, 返回1表明不用退到userspace, 否则退到userspace
- |	|	|   ├─ kvm_request_pending(); // 进入Guest模式前先处理相关挂起的请求(vcpu->requests大于0), 每个有相应处理
- |	|	|   ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
- |	|	|   |   ├─ ++vcpu->stat.req_event;      // 
- |	|	|   |   ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi等
- |	|	|   ├─ kvm_mmu_reload(vcpu);  			// 加载mmu
- |	|	|   ├─ kvm_x86_ops.prepare_guest_switch(vcpu); // // 进入Guest前期准备，架构相关, 准备陷入到guest, 保存vmexit时加载的host状态
- |	|	|   ├─ local_irq_disable();  			// 屏蔽中断响应，准备进入guest
- |	|	|   ├─ vcpu->mode = IN_GUEST_MODE;  // 将vcpu模式设为guest模式
- |	|	|   ├─ guest_enter_irqoff();  			// 计算虚拟机系统时间和上下文切换
- |	|	|   ├─ kvm_x86_ops.run(vcpu)  			// 开始运行guest, 会调用vmx_vcpu_run
- |	|	|   |   ├─ __vmx_vcpu_run()  			// 调用汇编代码, vmlaunch指令, 再往后就是vm-exit的流程了
- |	|	|   |   ├─ vmx->exit_reason =  vmx->fail ? 0xdead : vmcs_read32(VM_EXIT_REASON);  // 获取vm-exit原因
- |	|	|   |   ├─ vmx->idt_vectoring_info = vmcs_read32(IDT_VECTORING_INFO_FIELD); // 获取
- |	|	|   |   ├─ vmx_recover_nmi_blocking(vmx); // 恢复系统NMI中断
- |	|	|   |   └─ vmx_complete_interrupts(vmx);  // 恢复中断
- |	|	|   ├─ hw_breakpoint_restore()	// 恢复硬件断点
- |	|	|   ├─ vcpu->mode = OUTSIDE_GUEST_MODE;	// vcpu mode
- |	|	|   ├─ kvm_x86_ops.handle_exit_irqoff(vcpu);	// vcpu mode
- |	|	|   ├─ local_irq_enable();	// 打开中断
- |	|	|   ├─ preempt_enable();	// 打开抢占
- |	|	|   ├─ kvm_x86_ops.handle_exit(vcpu)	// vmexit的处理, 由vmx_handle_exit实现, 主要设置vcpu->run->exit_reason，让外部感知退出原因，并对应处理。
- ├─         								// 
+ |   ├─for(;;)                               // 循环受vcpu_enter_guest()返回值/系统信号控制, 只有异常/有外部信号才退出循环
+ |   |   ├─ vcpu_enter_guest()      // 物理CPU进入guest模式, 返回1表明不用退到userspace, 否则退到userspace
+ |   |	|   ├─ kvm_request_pending(); // 进入Guest模式前先处理相关挂起的请求(vcpu->requests), 每个有相应处理
+ |   |	|   ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
+ |   |	|   |   ├─ ++vcpu->stat.req_event;      // 
+ |   |	|   |   ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi等
+ |   |	|   ├─ kvm_mmu_reload(vcpu);  			// 加载mmu
+ |   |	|   ├─ kvm_x86_ops.prepare_guest_switch(vcpu); // // 进入Guest前期准备，架构相关, 准备陷入到guest, 保存vmexit时加载的host状态
+ |   |	|   ├─ local_irq_disable();  			// 屏蔽中断响应，准备进入guest
+ |   |	|   ├─ vcpu->mode = IN_GUEST_MODE;  		// 将vcpu模式设为guest模式
+ |   |	|   ├─ guest_enter_irqoff();  			// 计算虚拟机系统时间和上下文切换
+ |   |	|   ├─ kvm_x86_ops.run(vcpu)  			// 开始运行guest, 会调用vmx_vcpu_run
+ |   |	|   |   ├─ __vmx_vcpu_run()  			// 调用汇编代码, vmlaunch指令, 再往后就是vm-exit的流程了
+ |   |	|   |   ├─ vmx->exit_reason =  vmx->fail ? 0xdead : vmcs_read32(VM_EXIT_REASON);  // 获取vm-exit原因
+ |   |	|   |   ├─ vmx->idt_vectoring_info = vmcs_read32(IDT_VECTORING_INFO_FIELD); // 获取
+ |   |	|   |   ├─ vmx_recover_nmi_blocking(vmx); // 恢复系统NMI中断
+ |   |	|   |   └─ vmx_complete_interrupts(vmx);  // 恢复中断
+ |   |	|   ├─ hw_breakpoint_restore()	// 恢复硬件断点
+ |   |	|   ├─ vcpu->mode = OUTSIDE_GUEST_MODE;	// vcpu mode
+ |   |	|   ├─ kvm_x86_ops.handle_exit_irqoff(vcpu);	// vcpu mode
+ |   |	|   ├─ local_irq_enable();	// 打开中断
+ |   |	|   ├─ preempt_enable();	// 打开抢占
+ |   |	|   ├─ kvm_x86_ops.handle_exit(vcpu)	// vmexit的处理, 由vmx_handle_exit实现, 主要设置vcpu->run->exit_reason，让外部感知退出原因，并对应处理。
+ ├─ kvm_put_guest_fpu(); // 
+ ├─ post_kvm_run_save(); // 
+ ├─ kvm_sigset_deactivate(); // 
+ └─ vcpu_put(); // 
 ```
 
 ## 7.3. 代码分析
@@ -1181,8 +1186,7 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
         enum exit_fastpath_completion exit_fastpath = EXIT_FASTPATH_NONE;
 
         bool req_immediate_exit = false;
-        //进入Guest模式前先处理相关挂起的请求
-        // vcpu->requests大于0
+         /*进入Guest模式前先处理相关挂起的请求*/
         if (kvm_request_pending(vcpu)) {
                 if (kvm_check_request(KVM_REQ_GET_VMCS12_PAGES, vcpu)) {
                         if (unlikely(!kvm_x86_ops.get_vmcs12_pages(vcpu))) {
@@ -1190,7 +1194,7 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
                                 goto out;
                         }
                 }
-                /*MMU重加载, 先卸载*/
+                /*卸载MMU*/
                 if (kvm_check_request(KVM_REQ_MMU_RELOAD, vcpu))
                         kvm_mmu_unload(vcpu);
                 /*定时器迁移*/
