--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -990,32 +990,33 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  ├─ kvm_sigset_activate(vcpu)                // 信号屏蔽, 防止干扰
  ├─ kvm_load_guset_fpu()         			//  加载虚拟机的fpu
  |   ├─ kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
- |   ├─ kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
- |   └─ ; // 将当前进程的fpu赋值给vcpu
+ |   ├─ __copy_kernel_to_fpregs(); // 
+ |   └─ fpregs_mark_activate(); // 
  ├─ vcpu_run()            					// 死循环进入vcpu_enter_guest
- |   ├─for(;;)                               // 循环受vcpu_enter_guest()返回值/系统信号控制, 只有异常/有外部信号才退出循环
+ |   ├─ for(;;) { // 循环受vcpu_enter_guest()返回值/系统信号控制, 只有异常/有外部信号才退出循环
  |   |   ├─ vcpu_enter_guest()      // 物理CPU进入guest模式, 返回1表明不用退到userspace, 否则退到userspace
- |   |	|   ├─ kvm_request_pending(); // 进入Guest模式前先处理相关挂起的请求(vcpu->requests), 每个有相应处理
- |   |	|   ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
- |   |	|   |   ├─ ++vcpu->stat.req_event;      // 
- |   |	|   |   ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi等
- |   |	|   ├─ kvm_mmu_reload(vcpu);  			// 加载mmu
- |   |	|   ├─ kvm_x86_ops.prepare_guest_switch(vcpu); // // 进入Guest前期准备，架构相关, 准备陷入到guest, 保存vmexit时加载的host状态
- |   |	|   ├─ local_irq_disable();  			// 屏蔽中断响应，准备进入guest
- |   |	|   ├─ vcpu->mode = IN_GUEST_MODE;  		// 将vcpu模式设为guest模式
- |   |	|   ├─ guest_enter_irqoff();  			// 计算虚拟机系统时间和上下文切换
- |   |	|   ├─ kvm_x86_ops.run(vcpu)  			// 开始运行guest, 会调用vmx_vcpu_run
- |   |	|   |   ├─ __vmx_vcpu_run()  			// 调用汇编代码, vmlaunch指令, 再往后就是vm-exit的流程了
- |   |	|   |   ├─ vmx->exit_reason =  vmx->fail ? 0xdead : vmcs_read32(VM_EXIT_REASON);  // 获取vm-exit原因
- |   |	|   |   ├─ vmx->idt_vectoring_info = vmcs_read32(IDT_VECTORING_INFO_FIELD); // 获取
- |   |	|   |   ├─ vmx_recover_nmi_blocking(vmx); // 恢复系统NMI中断
- |   |	|   |   └─ vmx_complete_interrupts(vmx);  // 恢复中断
- |   |	|   ├─ hw_breakpoint_restore()	// 恢复硬件断点
- |   |	|   ├─ vcpu->mode = OUTSIDE_GUEST_MODE;	// vcpu mode
- |   |	|   ├─ kvm_x86_ops.handle_exit_irqoff(vcpu);	// vcpu mode
- |   |	|   ├─ local_irq_enable();	// 打开中断
- |   |	|   ├─ preempt_enable();	// 打开抢占
- |   |	|   ├─ kvm_x86_ops.handle_exit(vcpu)	// vmexit的处理, 由vmx_handle_exit实现, 主要设置vcpu->run->exit_reason，让外部感知退出原因，并对应处理。
+ |   |   |   ├─ kvm_request_pending(); // 进入Guest模式前先处理相关挂起的请求(vcpu->requests), 每个有相应处理
+ |   |   |   ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
+ |   |   |   |   ├─ ++vcpu->stat.req_event;      // 
+ |   |   |   |   ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi等
+ |   |   |   ├─ kvm_mmu_reload(vcpu); // 加载mmu
+ |   |   |   ├─ kvm_x86_ops.prepare_guest_switch(vcpu); // // 进入Guest前期准备，架构相关, 准备陷入到guest, 保存vmexit时加载的host状态
+ |   |   |   ├─ local_irq_disable();  // 屏蔽中断响应，准备进入guest
+ |   |   |   ├─ vcpu->mode = IN_GUEST_MODE;  // 将vcpu模式设为guest模式
+ |   |   |   ├─ guest_enter_irqoff();  // 计算虚拟机系统时间和上下文切换
+ |   |   |   ├─ kvm_x86_ops.run(vcpu)  	// 开始运行guest, 会调用vmx_vcpu_run
+ |   |   |   |   ├─ __vmx_vcpu_run() // 调用汇编代码, vmlaunch指令, 再往后就是vm-exit的流程了
+ |   |   |   |   ├─ vmx->exit_reason =  vmx->fail ? 0xdead : vmcs_read32(VM_EXIT_REASON);  // 获取vm-exit原因
+ |   |   |   |   ├─ vmx->idt_vectoring_info = vmcs_read32(IDT_VECTORING_INFO_FIELD); // 获取
+ |   |   |   |   ├─ vmx_recover_nmi_blocking(vmx); // 恢复系统NMI中断
+ |   |   |   |   └─ vmx_complete_interrupts(vmx);  // 恢复中断
+ |   |   |   ├─ hw_breakpoint_restore()	// 恢复硬件断点
+ |   |   |   ├─ vcpu->mode = OUTSIDE_GUEST_MODE;	// vcpu mode
+ |   |   |   ├─ kvm_x86_ops.handle_exit_irqoff(vcpu);	// vcpu mode
+ |   |   |   ├─ local_irq_enable();	// 打开中断
+ |   |   |   ├─ preempt_enable();	// 打开抢占
+ |   |   |   └─ kvm_x86_ops.handle_exit(vcpu)	// vmexit的处理, 由vmx_handle_exit实现, 主要设置vcpu->run->exit_reason，让外部感知退出原因，并对应处理。
+ |   └─ }  // 循环
  ├─ kvm_put_guest_fpu(); // 
  ├─ post_kvm_run_save(); // 
  ├─ kvm_sigset_deactivate(); // 
