--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1026,6 +1026,28 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
 ## 7.3. 代码分析
 
 ```cpp
+// include/linux/kvm_host.h
+enum {
+        // host 模式
+        OUTSIDE_GUEST_MODE,
+        // 虚拟机模式
+        IN_GUEST_MODE,
+        // 表明ipi将很快发生
+        EXITING_GUEST_MODE,
+        READING_SHADOW_PAGE_TABLES,
+};
+```
+
+```cpp
+bool kvm_vcpu_exit_request(struct kvm_vcpu *vcpu)
+{
+	return vcpu->mode == EXITING_GUEST_MODE || kvm_request_pending(vcpu) ||
+		need_resched() || signal_pending(current);
+}
+EXPORT_SYMBOL_GPL(kvm_vcpu_exit_request);
+```
+
+```cpp
 // 运行VCPU(即运行虚拟机)的入口函数
 int kvm_arch_vcpu_ioctl_run(struct kvm_vcpu *vcpu, struct kvm_run *kvm_run)
 {
