--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1039,8 +1039,10 @@ enum {
 ```
 
 ```cpp
-// 在立即进入guest之前需要检查一些条件, 这个函数内容的检查，我们需要检查一些条件，然后再立即进入guest，我们跳过调用退出处理程序，并通过完整的运行循环，如果完成快速路径，但有东西阻止我们再次立即进入来宾
-// Introduce kvm_vcpu_exit_request() helper, we need to check some conditions before enter guest again immediately, we skip invoking the exit handler and go through full run loop if complete fastpath but there is stuff preventing we enter guest again immediately.
+// 如果fastpath完成, 那么我们可以直接跳过exit handler的调用处理和整个run loop, 从而直接进入guest, 但是在一些条件下不能立即进入guest.
+// 这个函数就是不能立即进入guest的条件
+// We need to check some conditions before enter guest again immediately, 
+// we skip invoking the exit handler and go through full run loop if complete fastpath but there is stuff preventing we enter guest again immediately.
 bool kvm_vcpu_exit_request(struct kvm_vcpu *vcpu)
 {
 	return vcpu->mode == EXITING_GUEST_MODE || kvm_request_pending(vcpu) ||
