--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -29,6 +29,15 @@
 
 # 2. 相关结构体
 
+```cpp
+struct kvm_lapic {
+        // APIC Timer
+        struct kvm_timer lapic_timer;
+}
+```
+
+详细见`Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md`
+
 # 3. 创建和初始化虚拟定时器设备
 
 由于APIC Timer设备实际就是**lapic**的一个**功能**，所以在创建lapic设备同时，也就辅助设置了。
