--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -63,7 +63,12 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 
 # 4. 启动定时器
 
-启用上面的定时器, 产生调用回调函数
+```cpp
+// 写寄存器
+kvm_lapic_reg_write
+```
+
+启用上面的定时器, 最终会调用apic timer回调函数
 
 ## 4.1. 整体流程
 
