--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -64,8 +64,13 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 # 4. 启动定时器
 
 ```cpp
-// 写寄存器
-kvm_lapic_reg_write
+// 写寄存器 IMICT, 初始计数寄存器, one-shot/period
+kvm_lapic_reg_write(); case APIC_IMICT;
+```
+
+```cpp
+// 写tscdeadline的msr寄存器, tscdeadline模式, tsc到达触发中断
+kvm_set_lapic_tscdeadline_msr()
 ```
 
 启用上面的定时器, 最终会调用apic timer回调函数
