--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -7,15 +7,16 @@
 - [2. 相关结构体](#2-相关结构体)
 - [3. 创建和初始化虚拟定时器设备](#3-创建和初始化虚拟定时器设备)
 - [4. 启动定时器](#4-启动定时器)
-  - [4.1. 整体流程](#41-整体流程)
-  - [4.2. 入口代码](#42-入口代码)
-  - [4.3. set_target_expiration(): 设置目标过期时间](#43-set_target_expiration-设置目标过期时间)
-  - [4.4. restart_apic_timer(): 重启apic timer定时器](#44-restart_apic_timer-重启apic-timer定时器)
-    - [4.4.1. start_hv_timer(): 使用hv timer](#441-start_hv_timer-使用hv-timer)
-    - [start_sw_timer(): 使用sw timer](#start_sw_timer-使用sw-timer)
-    - [start_sw_period(): 周期性或一次性模式](#start_sw_period-周期性或一次性模式)
-    - [start_sw_tscdeadline(): tscdeadline模式](#start_sw_tscdeadline-tscdeadline模式)
-    - [apic_timer_expired(): apic timer已经到期处理](#apic_timer_expired-apic-timer已经到期处理)
+  - [4.1. 定时器的触发](#41-定时器的触发)
+  - [4.2. 整体流程](#42-整体流程)
+  - [4.3. 入口代码](#43-入口代码)
+  - [4.4. set_target_expiration(): 设置目标过期时间](#44-set_target_expiration-设置目标过期时间)
+  - [4.5. restart_apic_timer(): 重启apic timer定时器](#45-restart_apic_timer-重启apic-timer定时器)
+    - [4.5.1. start_hv_timer(): 使用hv timer](#451-start_hv_timer-使用hv-timer)
+    - [4.5.2. start_sw_timer(): 使用sw timer](#452-start_sw_timer-使用sw-timer)
+    - [4.5.3. start_sw_period(): 周期性或一次性模式](#453-start_sw_period-周期性或一次性模式)
+    - [4.5.4. start_sw_tscdeadline(): tscdeadline模式](#454-start_sw_tscdeadline-tscdeadline模式)
+    - [4.5.5. apic_timer_expired(): apic timer已经到期处理](#455-apic_timer_expired-apic-timer已经到期处理)
 
 <!-- /code_chunk_output -->
 
@@ -63,6 +64,8 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 
 # 4. 启动定时器
 
+## 4.1. 定时器的触发
+
 ```cpp
 // 写寄存器 IMICT, 初始计数寄存器, one-shot/period
 kvm_lapic_reg_write(); case APIC_IMICT;
@@ -75,7 +78,7 @@ kvm_set_lapic_tscdeadline_msr()
 
 启用上面的定时器, 最终会调用apic timer回调函数
 
-## 4.1. 整体流程
+## 4.2. 整体流程
 
 ```cpp
 start_apic_timer()  // 启动apic timer定时器
@@ -119,7 +122,7 @@ start_apic_timer()  // 启动apic timer定时器
 
 ```
 
-## 4.2. 入口代码
+## 4.3. 入口代码
 
 ```cpp
 // Timer initial counter register, timer初始计数寄存器
@@ -150,7 +153,7 @@ static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
 
 对于tscdeadline模式, 直接调用`restart_apic_timer()`, 启用apic timer定时器
 
-## 4.3. set_target_expiration(): 设置目标过期时间
+## 4.4. set_target_expiration(): 设置目标过期时间
 
 当前流程中, 只有**周期性/一次性**模式才调用, tscdeadline模式不调用
 
@@ -236,7 +239,7 @@ static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
 3. 设置`apic->lapic_timer.tscdeadline`为 `虚拟机tsc + deadline`
 4. 设置`apic->lapic_timer.target_expiration`为 `ktime_get() + deadline`
 
-## 4.4. restart_apic_timer(): 重启apic timer定时器
+## 4.5. restart_apic_timer(): 重启apic timer定时器
 
 ```cpp
 static void restart_apic_timer(struct kvm_lapic *apic)
@@ -258,7 +261,7 @@ out:
 
 先试图启用hv timer, 如果启动失败, 则使用sw timer.
 
-### 4.4.1. start_hv_timer(): 使用hv timer
+### 4.5.1. start_hv_timer(): 使用hv timer
 
 ```cpp
 
@@ -403,7 +406,7 @@ static void vmx_cancel_hv_timer(struct kvm_vcpu *vcpu)
 
 4. 对于非周期性的, 已经到期了, 则调用`apic_timer_expired()`, 见下面
 
-### start_sw_timer(): 使用sw timer
+### 4.5.2. start_sw_timer(): 使用sw timer
 
 ```cpp
 static void start_sw_timer(struct kvm_lapic *apic)
@@ -436,7 +439,7 @@ static void start_sw_timer(struct kvm_lapic *apic)
 
 针对tscdeadline的, 调用`start_sw_tscdeadline()`;
 
-### start_sw_period(): 周期性或一次性模式
+### 4.5.3. start_sw_period(): 周期性或一次性模式
 
 使用`apic->lapic_timer.target_expiration`
 
@@ -501,7 +504,7 @@ static void advance_periodic_target_expiration(struct kvm_lapic *apic)
 
 
 
-### start_sw_tscdeadline(): tscdeadline模式
+### 4.5.4. start_sw_tscdeadline(): tscdeadline模式
 
 使用`apic->lapic_timer.tscdeadline`
 
@@ -547,7 +550,7 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
 }
 ```
 
-### apic_timer_expired(): apic timer已经到期处理
+### 4.5.5. apic_timer_expired(): apic timer已经到期处理
 
 ```cpp
 static void apic_timer_expired(struct kvm_lapic *apic, bool from_timer_fn)
