--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -68,12 +68,32 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 
 ```cpp
 // 写寄存器 IMICT, 初始计数寄存器, one-shot/period
-kvm_lapic_reg_write(); case APIC_IMICT;
+kvm_lapic_reg_write(struct kvm_lapic *apic, u32 reg, u32 val)
+
+        case APIC_TMICT:
+                if (apic_lvtt_tscdeadline(apic))
+                        break;
+
+                hrtimer_cancel(&apic->lapic_timer.timer);
+                kvm_lapic_set_reg(apic, APIC_TMICT, val);
+                start_apic_timer(apic);
+                break;
 ```
 
 ```cpp
 // 写tscdeadline的msr寄存器, tscdeadline模式, tsc到达触发中断
-kvm_set_lapic_tscdeadline_msr()
+void kvm_set_lapic_tscdeadline_msr(struct kvm_vcpu *vcpu, u64 data)
+{
+        struct kvm_lapic *apic = vcpu->arch.apic;
+
+        if (!lapic_in_kernel(vcpu) || apic_lvtt_oneshot(apic) ||
+                        apic_lvtt_period(apic))
+                return;
+
+        hrtimer_cancel(&apic->lapic_timer.timer);
+        apic->lapic_timer.tscdeadline = data;
+        start_apic_timer(apic);
+}
 ```
 
 启用上面的定时器, 最终会调用apic timer回调函数
