--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -85,13 +85,18 @@ kvm_lapic_reg_write(struct kvm_lapic *apic, u32 reg, u32 val)
 void kvm_set_lapic_tscdeadline_msr(struct kvm_vcpu *vcpu, u64 data)
 {
         struct kvm_lapic *apic = vcpu->arch.apic;
-
+        // lapic 不在内核态实现, 
+        // 或lapic处于oneshot模式
+        // 或lapic处于周期性模式, 
+        // 则直接返回
         if (!lapic_in_kernel(vcpu) || apic_lvtt_oneshot(apic) ||
                         apic_lvtt_period(apic))
                 return;
-
+        // 取消lapic的hrtimer
         hrtimer_cancel(&apic->lapic_timer.timer);
+        // 设置lapic timer的tscdeadline值
         apic->lapic_timer.tscdeadline = data;
+        // 启用lapic的timer
         start_apic_timer(apic);
 }
 ```
