--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -373,6 +373,7 @@ struct kvm_lapic {
          * the guest 1:1, because it is accessed by the vmx microcode.
          * Note: Only one register, the TPR, is used by the microcode.
          */
+        // 所有寄存器
         void *regs;
         gpa_t vapic_addr;
         struct gfn_to_hva_cache vapic_cache;
