--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -71,10 +71,12 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 kvm_lapic_reg_write(struct kvm_lapic *apic, u32 reg, u32 val)
 
         case APIC_TMICT:
+                // tscdeadline模式, 直接中断返回
                 if (apic_lvtt_tscdeadline(apic))
                         break;
-
+                // 取消lapic的hrtimer
                 hrtimer_cancel(&apic->lapic_timer.timer);
+                // 设置lapic的APIC_TMICT寄存器值
                 kvm_lapic_set_reg(apic, APIC_TMICT, val);
                 start_apic_timer(apic);
                 break;
