--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -78,6 +78,7 @@ kvm_lapic_reg_write(struct kvm_lapic *apic, u32 reg, u32 val)
                 hrtimer_cancel(&apic->lapic_timer.timer);
                 // 设置lapic的APIC_TMICT寄存器值
                 kvm_lapic_set_reg(apic, APIC_TMICT, val);
+                // 启用lapic的timer
                 start_apic_timer(apic);
                 break;
 ```
