--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -120,33 +120,33 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   ├─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, deadline); // tscdeadline设置, tsc+deadline
  |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置, now+deadline
  |   └─ restart_apic_timer();  // 重启定时器
- |   |   ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
- |   |   ├─ start_hv_timer(); // 能使用hv timer, 则使用hv timer
- |   |   |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
- |   |   |   ├─ !apic->lapic_timer->tscdeadline; return false// tscdeadline是0, 则直接返回false
- |   |   |   ├─ kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired); // 设置vmx->hv_deadline_tsc, 失败则直接返回false
- |   |   |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
- |   |   |   |   ├─ delta_tsc = max(guest_deadline_tsc, guest_tscl) - guest_tscl;// 虚拟机tscdeadline的tsc差值
- |   |   |   |   ├─ vmx->hv_deadline_tsc = tscl + delta_tsc;// 设置hv_deadline_tsc
- |   |   |   |   └─ *expired = !delta_tsc; // 是否到期
- |   |   |   ├─ ktimer->hv_timer_in_use = true; // 设置apic timer的hv timer在使用
- |   |   |   ├─ hrtimer_cancel(&ktimer->timer); // 取消hrtimer定时器
- |   |   |   ├─ cancel_hv_timer(apic); // 非周期性且有timer pending, 取消hv timer
- |   |   |   ├─ apic_timer_expired(apic, false); // 非周期性, 没有pending且已经到期, 
- |   |   |   └─ cancel_hv_timer(vcpu); // 非周期性, 没有pending且已经到期, 取消hv timer
- |   |   └─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
- |   |   |   ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消
- |   |   |   ├─ start_sw_period(); // 周期性或一次性模式, 调用
- |   |   |   |   ├─ apic_timer_expired(); // 当前时间晚于target_expiration, 即已经过期, 则直接注入pending timer irq
- |   |   |   |   ├─ apic_lvtt_oneshot(apic); return;// 已经过期并且是一次性模式, 则直接结束, 返回
- |   |   |   |   ├─ advance_periodic_target_expiration();// 对于周期性的, 设置周期性目标超时时间 
- |   |   |   |   └─ hrtimer_start(lapic_timer.timer, apic->lapic_timer.target_expiration, HRTIMER_MODE_ABS_HARD); // 启用hrtimer, 超时参数是target_expiration
- |   |   |   └─ start_sw_tscdeadline(vcpu); // tscdeadline模式, 调用
- |   |   |   |   ├─ tscdeadline = ktimer->tscdeadline; // 获取apic timer的tscdeadline值
- |   |   |   |   ├─ ns = (tscdeadline - guest_tsc) * 1000000ULL; // 根据vcpu tsc频率得到差值的ns单位值
- |   |   |   |   ├─ do_div(ns, this_tsc_khz); // 根据vcpu的tsc计数频率计算差
- |   |   |   |   ├─ hrtimer_start(&ktimer->timer, expire, HRTIMER_MODE_ABS_HARD); // 当还没有到期并且差值大于advanced timer调整时间, 则启用hrtimer
- |   |   |   |   └─ apic_timer_expired(apic, false); // 否则调用apic timer到期函数
+ |       ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
+ |       ├─ start_hv_timer(); // 能使用hv timer, 则使用hv timer
+ |       |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
+ |       |   ├─ !apic->lapic_timer->tscdeadline; return false// tscdeadline是0, 则直接返回false
+ |       |   ├─ kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired); // 设置vmx->hv_deadline_tsc, 失败则直接返回false
+ |       |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
+ |       |   |   ├─ delta_tsc = max(guest_deadline_tsc, guest_tscl) - guest_tscl;// 虚拟机tscdeadline的tsc差值
+ |       |   |   ├─ vmx->hv_deadline_tsc = tscl + delta_tsc;// 设置hv_deadline_tsc
+ |       |   |   └─ *expired = !delta_tsc; // 是否到期
+ |       |   ├─ ktimer->hv_timer_in_use = true; // 设置apic timer的hv timer在使用
+ |       |   ├─ hrtimer_cancel(&ktimer->timer); // 取消hrtimer定时器
+ |       |   ├─ cancel_hv_timer(apic); // 非周期性且有timer pending, 取消hv timer
+ |       |   ├─ apic_timer_expired(apic, false); // 非周期性, 没有pending且已经到期, 
+ |       |   └─ cancel_hv_timer(vcpu); // 非周期性, 没有pending且已经到期, 取消hv timer
+ |       └─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
+ |       |   ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消
+ |       |   ├─ start_sw_period(); // 周期性或一次性模式, 调用
+ |       |   |   ├─ apic_timer_expired(); // 当前时间晚于target_expiration, 即已经过期, 则直接注入pending timer irq
+ |       |   |   ├─ apic_lvtt_oneshot(apic); return;// 已经过期并且是一次性模式, 则直接结束, 返回
+ |       |   |   ├─ advance_periodic_target_expiration();// 对于周期性的, 设置周期性目标超时时间 
+ |       |   |   └─ hrtimer_start(lapic_timer.timer, apic->lapic_timer.target_expiration, HRTIMER_MODE_ABS_HARD); // 启用hrtimer, 超时参数是target_expiration
+ |       |   └─ start_sw_tscdeadline(vcpu); // tscdeadline模式, 调用
+ |       |   |   ├─ tscdeadline = ktimer->tscdeadline; // 获取apic timer的tscdeadline值
+ |       |   |   ├─ ns = (tscdeadline - guest_tsc) * 1000000ULL; // 根据vcpu tsc频率得到差值的ns单位值
+ |       |   |   ├─ do_div(ns, this_tsc_khz); // 根据vcpu的tsc计数频率计算差
+ |       |   |   ├─ hrtimer_start(&ktimer->timer, expire, HRTIMER_MODE_ABS_HARD); // 当还没有到期并且差值大于advanced timer调整时间, 则启用hrtimer
+ |       |   |   └─ apic_timer_expired(apic, false); // 否则调用apic timer到期函数
 
 ```
 
