--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -277,7 +277,7 @@ static void restart_apic_timer(struct kvm_lapic *apic)
         // apic timer有pending事件, 直接退出
         if (!apic_lvtt_period(apic) && atomic_read(&apic->lapic_timer.pending))
                 goto out;
-
+        // 优先使用hv timer
         if (!start_hv_timer(apic))
                 start_sw_timer(apic);
 out:
