--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -12,7 +12,7 @@
   - [4.3. 入口代码](#43-入口代码)
   - [4.4. set_target_expiration(): 设置目标过期时间](#44-set_target_expiration-设置目标过期时间)
   - [4.5. restart_apic_timer(): 重启apic timer定时器](#45-restart_apic_timer-重启apic-timer定时器)
-    - [4.5.1. start_hv_timer(): 使用hv timer](#451-start_hv_timer-使用hv-timer)
+    - [4.5.1. start_hv_timer(): 优先使用hv timer](#451-start_hv_timer-优先使用hv-timer)
     - [4.5.2. start_sw_timer(): 使用sw timer](#452-start_sw_timer-使用sw-timer)
     - [4.5.3. start_sw_period(): 周期性或一次性模式](#453-start_sw_period-周期性或一次性模式)
     - [4.5.4. start_sw_tscdeadline(): tscdeadline模式](#454-start_sw_tscdeadline-tscdeadline模式)
@@ -124,6 +124,9 @@ start_apic_timer()  // 启动apic timer定时器
  |       ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
  |       ├─ start_hv_timer(); // 优先使用hv timer, 
  |       |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
+ |       |   |   ├─ kvm_x86_ops.set_hv_timer // 有set_hv_timer方法
+ |       |   |   ├─ kvm_x86_ops.set_hv_timer // 有set_hv_timer方法
+ |       |   |   └─ kvm_x86_ops.set_hv_timer // 有set_hv_timer方法
  |       |   ├─ !apic->lapic_timer->tscdeadline; return false// tscdeadline是0, 则直接返回false
  |       |   ├─ kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired); // 设置vmx->hv_deadline_tsc, 失败则直接返回false
  |       |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
@@ -135,7 +138,7 @@ start_apic_timer()  // 启动apic timer定时器
  |       |   ├─ cancel_hv_timer(apic); // 非周期性且有timer pending, 取消hv timer
  |       |   ├─ apic_timer_expired(apic, false); // 非周期性, 没有pending且已经到期, 
  |       |   └─ cancel_hv_timer(vcpu); // 非周期性, 没有pending且已经到期, 取消hv timer
- |       ├─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
+ |       start_sw_timer(); // 不能使用hv timer, 则使用sw timer
  |       |   ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消
  |       |   ├─ start_sw_period(); // 周期性或一次性模式, 调用
  |       |   |   ├─ apic_timer_expired(); // 当前时间晚于target_expiration, 即已经过期, 则直接注入pending timer irq
@@ -291,7 +294,7 @@ out:
 
 先试图启用hv timer, 如果启动失败, 则使用sw timer.
 
-### 4.5.1. start_hv_timer(): 使用hv timer
+### 4.5.1. start_hv_timer(): 优先使用hv timer
 
 ```cpp
 
