--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -124,9 +124,6 @@ start_apic_timer()  // 启动apic timer定时器
  |       ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
  |       ├─ start_hv_timer(); // 优先使用hv timer, 
  |       |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
- |       |   |   ├─ kvm_x86_ops.set_hv_timer // 有set_hv_timer方法
- |       |   |   ├─ kvm_x86_ops.set_hv_timer // 有set_hv_timer方法
- |       |   |   └─ kvm_x86_ops.set_hv_timer // 有set_hv_timer方法
  |       |   ├─ !apic->lapic_timer->tscdeadline; return false// tscdeadline是0, 则直接返回false
  |       |   ├─ kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired); // 设置vmx->hv_deadline_tsc, 失败则直接返回false
  |       |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
@@ -310,6 +307,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
         if (!kvm_can_use_hv_timer(vcpu))
                 return false;
         // tscdeadline是0, 直接返回false
+        // 也就是说不是tscdeadline模式肯定不用hv timer??
         if (!ktimer->tscdeadline)
                 return false;
         // 对应vmx的vmx_set_hv_timer, 设置vmx->hv_deadline_tsc
@@ -356,13 +354,13 @@ static bool start_hv_timer(struct kvm_lapic *apic)
 bool kvm_can_use_hv_timer(struct kvm_vcpu *vcpu)
 {
         return kvm_x86_ops.set_hv_timer
-               // mwait透传, kvm能够post timer interrupt
+               // mwait没有透传, 或kvm不能能够post timer interrupt
                && !(kvm_mwait_in_guest(vcpu->kvm) ||
                     kvm_can_post_timer_interrupt(vcpu));
 }
 ```
 
-mwait指令透传给虚拟机, 或者能够post timer interrupt, 这个都不成立, 则表明能够使用hv timer
+mwait指令没有透传给虚拟机, 或者不能够post timer interrupt, 这个都不成立, 则表明能够使用hv timer, 为什么???
 
 2. 调用vmx的`vmx_set_hv_timer`, 设置`vmx->hv_deadline_tsc`
 
