--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -129,10 +129,13 @@ start_apic_timer()  // 启动apic timer定时器
  |       |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
  |       |   |   ├─ delta_tsc = max(guest_deadline_tsc, guest_tscl) - guest_tscl;// 虚拟机tscdeadline的tsc差值
  |       |   |   ├─ vmx->hv_deadline_tsc = tscl + delta_tsc;// 设置hv_deadline_tsc
- |       |   |   └─ *expired = !delta_tsc; // 是否到期
+ |       |   |   └─ *expired = !delta_tsc; // 设置是否到期
  |       |   ├─ ktimer->hv_timer_in_use = true; // 设置apic timer的hv timer在使用
  |       |   ├─ hrtimer_cancel(&ktimer->timer); // 取消hrtimer定时器
  |       |   ├─ cancel_hv_timer(apic); // 非周期性且有timer pending, 取消hv timer
+ |       |   |   ├─ kvm_x86_ops.cancel_hv_timer(apic->vcpu); // 取消hv timer
+ |       |   |   |   └─ to_vmx(vcpu)->hv_deadline_tsc = -1; // 
+ |       |   |   └─ ktimer->hv_timer_in_use = false; // 设置apic timer的hv timer不在使用
  |       |   ├─ apic_timer_expired(apic, false); // 非周期性, 没有pending且已经到期, 
  |       |   └─ cancel_hv_timer(vcpu); // 非周期性, 没有pending且已经到期, 取消hv timer
  |       start_sw_timer(); // 不能使用hv timer, 则使用sw timer
@@ -307,7 +310,6 @@ static bool start_hv_timer(struct kvm_lapic *apic)
         if (!kvm_can_use_hv_timer(vcpu))
                 return false;
         // tscdeadline是0, 直接返回false
-        // 也就是说不是tscdeadline模式肯定不用hv timer??
         if (!ktimer->tscdeadline)
                 return false;
         // 对应vmx的vmx_set_hv_timer, 设置vmx->hv_deadline_tsc
