--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -465,9 +465,9 @@ static void start_sw_timer(struct kvm_lapic *apic)
 }
 ```
 
-如果hv timer在使用, 则取消;
+1. 如果hv timer在使用, 则取消;
 
-对于非周期性并且存在pending的, 直接返回;
+2. 对于非周期性但是却存在pending的, 直接返回;
 
 针对周期性或一次性的, 调用`start_sw_period()`;
 
