--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -140,6 +140,7 @@ start_apic_timer()  // 启动apic timer定时器
  |       |   └─ cancel_hv_timer(vcpu); // 非周期性, 没有pending且已经到期, 取消hv timer
  |       start_sw_timer(); // 不能使用hv timer, 则使用sw timer
  |       |   ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消hv timer
+ |       |   ├─ (!apic_lvtt_period(apic) && atomic_read(&ktimer->pending)); return; // 如果不是周期性的, 但是存在pending, 直接返回
  |       |   ├─ start_sw_period(); // 周期性或一次性模式, 调用
  |       |   |   ├─ apic_timer_expired(); // 当前时间晚于target_expiration, 即已经过期, 则直接注入pending timer irq
  |       |   |   ├─ apic_lvtt_oneshot(apic); return;// 已经过期并且是一次性模式, 则直接结束, 返回
