--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -117,7 +117,7 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // IMICT为0的话, 意味着停止一次性/周期性timer, 则设置tscdeadline为0然后返回
  |   |   ├─ limit_periodic_timer_frequency(apic); //
  |   |   ├─ deadline = apic->lapic_timer.period; // 等于IMICT
- |   |   ├─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, deadline); // tscdeadline设置, tsc+deadline
+ |   |   ├─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, deadline); // tscdeadline设置, 虚拟机tsc+deadline
  |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置, now+deadline
  |   └─ restart_apic_timer();  // 重启定时器
  |       ├─ preempt_disable(); // 关闭抢占
@@ -141,12 +141,13 @@ start_apic_timer()  // 启动apic timer定时器
  |       start_sw_timer(); // 不能使用hv timer, 则使用sw timer
  |       |   ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消hv timer
  |       |   ├─ (!apic_lvtt_period(apic) && atomic_read(&ktimer->pending)); return; // 如果不是周期性的, 但是存在pending, 直接返回
- |       |   ├─ start_sw_period(); // 周期性或一次性模式, 调用
+ |       |   ├─ start_sw_period(); // 周期性或一次性模式, 调用这个
+ |       |   |   ├─ (!apic->lapic_timer.period); return; // 如果周期为0(一般是IMICT), 表明停用one-shot或period, 直接返回
  |       |   |   ├─ apic_timer_expired(); // 当前时间晚于target_expiration, 即已经过期, 则直接注入pending timer irq
  |       |   |   ├─ apic_lvtt_oneshot(apic); return;// 已经过期并且是一次性模式, 则直接结束, 返回
  |       |   |   ├─ advance_periodic_target_expiration();// 对于周期性的, 设置周期性目标超时时间 
  |       |   |   └─ hrtimer_start(lapic_timer.timer, apic->lapic_timer.target_expiration, HRTIMER_MODE_ABS_HARD); // 启用hrtimer, 超时参数是target_expiration
- |       |   └─ start_sw_tscdeadline(vcpu); // tscdeadline模式, 调用
+ |       |   └─ start_sw_tscdeadline(vcpu); // tscdeadline模式, 调用这个
  |       |   |   ├─ tscdeadline = ktimer->tscdeadline; // 获取apic timer的tscdeadline值
  |       |   |   ├─ ns = (tscdeadline - guest_tsc) * 1000000ULL; // 根据vcpu tsc频率得到差值的ns单位值
  |       |   |   ├─ do_div(ns, this_tsc_khz); // 根据vcpu的tsc计数频率计算差
@@ -452,7 +453,7 @@ static void start_sw_timer(struct kvm_lapic *apic)
         // hv timer在使用, 则取消
         if (apic->lapic_timer.hv_timer_in_use)
                 cancel_hv_timer(apic);
-        // 不是周期性并且存在pending, 直接返回
+        // 不是周期性, 但是存在pending, 直接返回
         if (!apic_lvtt_period(apic) && atomic_read(&ktimer->pending))
                 return;
         // 周期性或一次性模式
@@ -470,9 +471,9 @@ static void start_sw_timer(struct kvm_lapic *apic)
 
 2. 对于非周期性但是却存在pending的, 直接返回;
 
-针对周期性或一次性的, 调用`start_sw_period()`;
+3. 针对周期性或一次性的, 调用`start_sw_period()`;
 
-针对tscdeadline的, 调用`start_sw_tscdeadline()`;
+4. 针对tscdeadline的, 调用`start_sw_tscdeadline()`;
 
 ### 4.5.3. start_sw_period(): 周期性或一次性模式
 
@@ -503,7 +504,7 @@ static void start_sw_period(struct kvm_lapic *apic)
 
 如果当前时间晚于目标过期时间, 即**已经过期**的:
 
-1. 如果周期为0(一般是IMICT初始计数寄存器值), 表明停用oneshot或者周期性, 则直接返回
+1. 如果**周期为0**(一般是IMICT初始计数寄存器值), 表明**停用oneshot或者周期性**, 则直接返回, 不启用
 2. 调用`apic_timer_expired()`进行中断注入?, 
 3. 如果是一次性的话, 那就此结束, 直接返回
 4. 否则(周期性)调用`advance_periodic_target_expiration()`设置周期性目标过期时间
