--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -144,8 +144,8 @@ start_apic_timer()  // 启动apic timer定时器
  |       |   ├─ start_sw_period(); // 周期性或一次性模式, 调用这个
  |       |   |   ├─ (!apic->lapic_timer.period); return; // 如果周期为0(一般是IMICT), 表明停用one-shot或period, 直接返回
  |       |   |   ├─ apic_timer_expired(); // 当前时间晚于target_expiration, 即已经过期, 则直接注入pending timer irq
- |       |   |   ├─ apic_lvtt_oneshot(apic); return;// 已经过期并且是一次性模式, 则直接结束, 返回
- |       |   |   ├─ advance_periodic_target_expiration();// 对于周期性的, 设置周期性目标超时时间 
+ |       |   |   ├─ apic_lvtt_oneshot(apic); return;// 已经到期并且是一次性模式, 则直接结束, 返回
+ |       |   |   ├─ advance_periodic_target_expiration();// 已经过期, 对于周期性的, 设置周期性目标超时时间, 下一次触发
  |       |   |   └─ hrtimer_start(lapic_timer.timer, apic->lapic_timer.target_expiration, HRTIMER_MODE_ABS_HARD); // 启用hrtimer, 超时参数是target_expiration
  |       |   └─ start_sw_tscdeadline(vcpu); // tscdeadline模式, 调用这个
  |       |   |   ├─ tscdeadline = ktimer->tscdeadline; // 获取apic timer的tscdeadline值
@@ -506,19 +506,21 @@ static void start_sw_period(struct kvm_lapic *apic)
 
 1. 如果**周期为0**(一般是IMICT初始计数寄存器值), 表明**停用oneshot或者周期性**, 则直接返回, 不启用
 2. 调用`apic_timer_expired()`进行中断注入?, 
-3. 如果是一次性的话, 那就此结束, 直接返回
-4. 否则(周期性)调用`advance_periodic_target_expiration()`设置周期性目标过期时间
+3. 如果是**一次性的话**, 那就此**结束**, 直接返回
+4. 否则(**周期性**)调用`advance_periodic_target_expiration()`设置**周期性目标过期时间**
 5. 启动hrtimer, 超时时间是`apic->lapic_timer.target_expiration`(`ktime_get() + deadline`), 在
 6. 如果没有过期, 则直接启动apic timer的hrtimer.
 
-apic timer的hrtimer实在lapic创建时候初始化的, 该hr timer的中断响应回调函数是`apic_timer_fn()`, 详细见`中断虚拟化`部分
+apic timer的hrtimer实在lapic创建时候初始化的, 该hrtimer的中断响应回调函数是`apic_timer_fn()`, 详细见`中断虚拟化`部分
 
-总结: 对于周期性的, 无论如何都会启用hrtimer; 对于一次性的, 已经过期的直接注入一次, 否则启用hrtimer
+总结: 对于周期性的, 无论如何都会**启用hrtimer**; 对于一次性的, **已经过期的直接注入一次**, 否则**启用hrtimer**
 
 ```cpp
 static void advance_periodic_target_expiration(struct kvm_lapic *apic)
 {
+        // 当前时间
         ktime_t now = ktime_get();
+        // 当前tsc
         u64 tscl = rdtsc();
         ktime_t delta;
 
@@ -529,6 +531,7 @@ static void advance_periodic_target_expiration(struct kvm_lapic *apic)
          * cause the two to drift apart over time as the errors
          * accumulate.
          */
+        // 设置 target_expiration
         apic->lapic_timer.target_expiration =
                 ktime_add_ns(apic->lapic_timer.target_expiration,
                                 apic->lapic_timer.period);
