--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -118,7 +118,7 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   ├─ limit_periodic_timer_frequency(apic); //
  |   |   ├─ deadline = apic->lapic_timer.period; // 等于IMICT
  |   |   ├─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, deadline); // tscdeadline设置, 虚拟机tsc+deadline
- |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置, now+deadline
+ |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置, now + deadline
  |   └─ restart_apic_timer();  // 重启定时器
  |       ├─ preempt_disable(); // 关闭抢占
  |       ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
@@ -148,8 +148,8 @@ start_apic_timer()  // 启动apic timer定时器
  |       |   |   ├─ advance_periodic_target_expiration();// 已经过期, 对于周期性的, 设置周期性下一次目标超时时间
  |       |   |   |   ├─ apic->lapic_timer.target_expiration = ktime_add_ns(apic->lapic_timer.target_expiration, apic->lapic_timer.period) // 下一个周期的超时时间
  |       |   |   |   ├─ delta = ktime_sub(apic->lapic_timer.target_expiration, now); // 下一个周期的超时时间和现在时间的差值
- |       |   |   |   └─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, delta); // 
- |       |   |   └─ hrtimer_start(lapic_timer.timer, apic->lapic_timer.target_expiration, HRTIMER_MODE_ABS_HARD); // 启用hrtimer, 超时参数是target_expiration
+ |       |   |   |   └─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, delta); // 设置tscdeadline = 虚拟机中当前tsc + 差值
+ |       |   |   └─ hrtimer_start(lapic_timer.timer, apic->lapic_timer.target_expiration, HRTIMER_MODE_ABS_HARD); // 启用hrtimer, 一次性或者周期性的
  |       |   └─ start_sw_tscdeadline(vcpu); // tscdeadline模式, 调用这个
  |       |   |   ├─ tscdeadline = ktimer->tscdeadline; // 获取apic timer的tscdeadline值
  |       |   |   ├─ ns = (tscdeadline - guest_tsc) * 1000000ULL; // 根据vcpu tsc频率得到差值的ns单位值
@@ -383,7 +383,7 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
         vmx = to_vmx(vcpu);
         // 读取host tsc
         tscl = rdtsc();
-        // 读取guest tsc
+        // 读取guest tsc ???
         guest_tscl = kvm_read_l1_tsc(vcpu, tscl);
         // 虚拟机tscdeadline到期的差值, 可能是0
         delta_tsc = max(guest_deadline_tsc, guest_tscl) - guest_tscl;
@@ -541,13 +541,11 @@ static void advance_periodic_target_expiration(struct kvm_lapic *apic)
                                 apic->lapic_timer.period);
         // 下一个周期超时时间和现在时间的差值
         delta = ktime_sub(apic->lapic_timer.target_expiration, now);
-        // 设置tscdeadline = 
+        // 设置tscdeadline = 虚拟机中当前tsc + 差值
         apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) +
                 nsec_to_cycles(apic->vcpu, delta);
 }
 ```
-
-
 
 ### 4.5.4. start_sw_tscdeadline(): tscdeadline模式
 
