--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -143,7 +143,7 @@ start_apic_timer()  // 启动apic timer定时器
  |       |   ├─ (!apic_lvtt_period(apic) && atomic_read(&ktimer->pending)); return; // 如果不是周期性的, 但是存在pending, 直接返回
  |       |   ├─ start_sw_period(); // 周期性或一次性模式, 调用这个
  |       |   |   ├─ (!apic->lapic_timer.period); return; // 如果周期为0(一般是IMICT), 表明停用one-shot或period, 直接返回
- |       |   |   ├─ apic_timer_expired(); // 当前时间晚于target_expiration, 即已经过期, 则直接注入pending timer irq
+ |       |   |   ├─ apic_timer_expired(apic, false); // 当前时间晚于target_expiration, 即已经过期, 则直接注入pending timer irq
  |       |   |   ├─ apic_lvtt_oneshot(apic); return;// 已经到期并且是一次性模式, 则直接结束, 返回
  |       |   |   ├─ advance_periodic_target_expiration();// 已经过期, 对于周期性的, 设置周期性下一次目标超时时间
  |       |   |   |   ├─ apic->lapic_timer.target_expiration = ktime_add_ns(apic->lapic_timer.target_expiration, apic->lapic_timer.period) // 下一个周期的超时时间
@@ -152,10 +152,12 @@ start_apic_timer()  // 启动apic timer定时器
  |       |   |   └─ hrtimer_start(lapic_timer.timer, apic->lapic_timer.target_expiration, HRTIMER_MODE_ABS_HARD); // 启用hrtimer, 一次性或者周期性的
  |       |   └─ start_sw_tscdeadline(vcpu); // tscdeadline模式, 调用这个
  |       |   |   ├─ tscdeadline = ktimer->tscdeadline; // 获取apic timer的tscdeadline值
- |       |   |   ├─ ns = (tscdeadline - guest_tsc) * 1000000ULL; // 根据vcpu tsc频率得到差值的ns单位值
+ |       |   |   ├─ local_irq_save(flags); // 关闭中断
+ |       |   |   ├─ ns = (tscdeadline - guest_tsc) * 1000000ULL; // 根据vcpu tsc频率得到目标tscdeadline与虚拟机tsc差值, ns单位
  |       |   |   ├─ do_div(ns, this_tsc_khz); // 根据vcpu的tsc计数频率计算差
- |       |   |   ├─ hrtimer_start(&ktimer->timer, expire, HRTIMER_MODE_ABS_HARD); // 当还没有到期并且差值大于advanced timer调整时间, 则启用hrtimer
- |       |   |   └─ apic_timer_expired(apic, false); // 否则调用apic timer到期函数
+ |       |   |   ├─ hrtimer_start(&ktimer->timer, expire, HRTIMER_MODE_ABS_HARD); // 当还没有到期并且差值大于advanced timer调整时间, 即没有超时, 则启用hrtimer
+ |       |   |   ├─ apic_timer_expired(apic, false); // 已经到期了
+ |       |   |   └─ local_irq_restore(flags); // 恢复中断
  |       └─ preempt_enable(); // 打开抢占
 
 ```
@@ -565,7 +567,7 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
 
         if (unlikely(!tscdeadline || !this_tsc_khz))
                 return;
-
+        // 关中断
         local_irq_save(flags);
         // 当前时间
         now = ktime_get();
@@ -575,7 +577,7 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
         ns = (tscdeadline - guest_tsc) * 1000000ULL;
         // 根据vcpu tsc计数频率得到差值的ns单位值
         do_div(ns, this_tsc_khz);
-        // tscdeadline大于虚拟机当前tsc
+        // tscdeadline大于虚拟机当前tsc, 即没有超时
         // 并且差值大于advanced timer调整的时间
         if (likely(tscdeadline > guest_tsc) &&
             likely(ns > apic->lapic_timer.timer_advance_ns)) {
@@ -588,7 +590,7 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
         } else
                 // 直接注入
                 apic_timer_expired(apic, false);
-
+        // 恢复中断
         local_irq_restore(flags);
 }
 ```
