--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -313,6 +313,8 @@ out:
 
 ### 4.5.1. start_hv_timer(): 优先使用hv timer
 
+这个就是`preemption timer`
+
 ```cpp
 
 static bool start_hv_timer(struct kvm_lapic *apic)
