--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/4. 编译和安装QEMU.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/4. 编译和安装QEMU.md
@@ -94,6 +94,8 @@ Standard options:
 执行configure文件进行**配置**的过程如下：
 
 ```
+# yum install glib2-devel
+# yum install pixman-devel
 # ./configure --target-list=x86_64-softmmu
 Install prefix    /usr/local￼
 BIOS directory    /usr/local/share/qemu￼
