--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
@@ -35,21 +35,50 @@ http://libvirt.org/sources/win32_experimental/Libvirt-0.8.8-0.exe
 libvirt在Linux环境下的安装有两种方式，具体介绍如下。
 
 （1）编译源码包
+
 编译源码包安装的具体步骤如下。
+
 1）下载源码包，下载地址可以参考如下网址。
+
 http://libvirt.org/downloads.html#releases
+
 2）解压源码包，并进入解压后的文件目录。
+
 代码8-1 解压源码包，并进入解压后的文件目录
-￼    (01)$ gunzip -c libvirt-x.x.x.tar.gz | tar xvf -￼    (02)$ cd libvirt-x.x.x
+
+```
+$ gunzip -c libvirt-x.x.x.tar.gz | tar xvf -￼   
+$ cd libvirt-x.x.x
+```
+
 3）编译并安装。
+
 代码8-2 编译安装
-￼    (01)$ ./configure [possible options]￼    (02)$ make￼    (03)$ sudo make install
+
+```
+$ ./configure [possible options]￼
+$ make￼
+$ sudo make install
+```
+
 （2）GIT安装
+
 libvirt的GIT安装步骤具体介绍如下。
+
 1）Libvirt的源代码可以在GIT仓库中获取，首先使用GIT更新。
+
 代码8-3 GIT更新
-￼    (01)$ git clone git://libvirt.org/libvirt.git
+
+```
+￼$ git clone git://libvirt.org/libvirt.git
+```
+
 2）使用autogen.sh命令进行编译，进而完成安装。
+
 代码8-4 用autogen.sh命令进行编译
 
-    (01)$ ./autogen.sh --prefix=$HOME/usr --enable-compile-warnings=error￼    (02)$ make￼    (03)$ sudo make install
+```
+$ ./autogen.sh --prefix=$HOME/usr --enable-compile-warnings=error￼
+$ make￼
+$ sudo make install
+```
