--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
@@ -78,6 +78,7 @@ libvirt的GIT安装步骤具体介绍如下。
 代码8-4 用autogen.sh命令进行编译
 
 ```
+$ ./autogen.sh --system
 $ ./autogen.sh --prefix=$HOME/usr --enable-compile-warnings=error￼
 $ make￼
 $ sudo make install
