--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -118,7 +118,11 @@ bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 
 
 # 12. VMX 杂项信息
 
-`IA32_VMX_MISC`
+`IA32_VMX_MISC`寄存器提供了一些vmx的杂项信息.
+
+![2020-06-28-23-20-30.png](./images/2020-06-28-23-20-30.png)
+
+
 
 # 13. VMCS 区域字段 index 值
 
