--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段.md
@@ -20,7 +20,7 @@ Pin-based VM-execution control 字段提供基于**处理器Pin接口**的控制
 
 ## activate VMX-preemption timer
 
-当为1, 启用VMX提供的定时器功能. VMM需要在`VMX-preemption timer value`字段为VM提供一个计数值. 该值在`VM-entry`操作开始后进行递减, 当减为0时发生`VM-exit`. 递减的步伐依赖于TSC和`IA32_VMX_MISC[4:0]`值, 见2.5.11.
+当为1, 启用VMX提供的定时器功能. VMM需要在`VMX-preemption timer value`字段为VM提供一个**计数值**. 该值在`VM-entry`操作开始后进行递减, 当减为0时发生`VM-exit`. 递减的步伐依赖于TSC和`IA32_VMX_MISC[4:0]`值, 见2.5.11.
 
 # 2. processor-based VM-execution control字段
 
