--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -16,8 +16,8 @@
     - [4.5.2. start_sw_timer(): 使用sw timer](#452-start_sw_timer-使用sw-timer)
     - [4.5.3. start_sw_period(): 周期性或一次性模式](#453-start_sw_period-周期性或一次性模式)
     - [4.5.4. start_sw_tscdeadline(): tscdeadline模式](#454-start_sw_tscdeadline-tscdeadline模式)
-    - [apic_timer_fn(): hrtimer到期的响应函数](#apic_timer_fn-hrtimer到期的响应函数)
-    - [4.5.5. apic_timer_expired(): apic timer已经到期处理](#455-apic_timer_expired-apic-timer已经到期处理)
+    - [4.5.5. apic_timer_fn(): hrtimer到期的响应函数](#455-apic_timer_fn-hrtimer到期的响应函数)
+    - [4.5.6. apic_timer_expired(): apic timer已经到期处理](#456-apic_timer_expired-apic-timer已经到期处理)
 
 <!-- /code_chunk_output -->
 
@@ -607,7 +607,7 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
 }
 ```
 
-### apic_timer_fn(): hrtimer到期的响应函数
+### 4.5.5. apic_timer_fn(): hrtimer到期的响应函数
 
 hrtimer到期后的响应函数
 
@@ -632,7 +632,7 @@ static enum hrtimer_restart apic_timer_fn(struct hrtimer *data)
 }
 ```
 
-### 4.5.5. apic_timer_expired(): apic timer已经到期处理
+### 4.5.6. apic_timer_expired(): apic timer已经到期处理
 
 ```cpp
 static void apic_timer_expired(struct kvm_lapic *apic, bool from_timer_fn)
