--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -25,7 +25,13 @@
 
 ![2020-05-26-09-28-21.png](./images/2020-05-26-09-28-21.png)
 
-前面提到, APIC Timer的APIC定时器有3种定时器模式
+前面提到, APIC Timer的APIC定时器有3种定时器模式. 从图中可以看到, timer中断大概分为下面几步
+
+1. 虚拟机设置APIC timer, 主要包括两个, 写IMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
+2. 
+
+
+
 
 下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程
 
